@@ -5,6 +5,7 @@
 	  Remove a redundant memset to 0 after a calloc(). Also check for null
 	  to prevent potential segfaults.
 	  Optimize out newx and newy in get_map_flags(). x and y are already copies.
+	  Optimize out check_dir in compute_monster_path().
 
 2016-05-17  Daniel Hawkins
 	* common/living.c: Change the depletion message for Con loss to differentiate
